# einconv

./: .conda_env.yml  .envrc  .gitignore  .gitmodules  .readthedocs.yaml  LICENSE.txt  README.md  black.toml  changelog.md  makefile  mkdocs.yml  setup.cfg  setup.py
.github/workflows/: lint-black.yaml  lint-darglint.yaml  lint-flake8.yaml  lint-isort.yaml  lint-pydocstyle.yaml  test.yaml
docs/: api.md  index.md
docs/api/: expressions.md  functionals.md  miscellaneous.md  modules.md  simplifications.md
docs/tutorials/: basic_conv2d.md  basic_conv2d.py
einconv/: __init__.py  conv_index_pattern.py  diag_ggn.py  einconvnd.py  index_pattern.py  kfac_reduce.py  kfc.py  unfoldnd.py  utils.py  vjp.py
einconv/expressions/: __init__.py  convNd_forward.py  convNd_input_vjp.py  convNd_kfac_reduce.py  convNd_kfac_reduce_factor.py  convNd_kfc.py  convNd_kfc_factor.py  convNd_unfold.py  convNd_weight_vjp.py  conv_transposeNd_forward.py  conv_transposeNd_kfac_reduce.py  conv_transposeNd_unfold.py  utils.py
einconv/functionals/: __init__.py  conv.py  unfold.py  unfold_transpose.py
einconv/modules/: __init__.py  conv.py  unfold.py
einconv/simplifications/: __init__.py  opt.py  symbolic.py
test/: __init__.py  cases.py  conv_functional_cases.py  conv_index_pattern_cases.py  conv_module_cases.py  index_pattern_cases.py  kfac_reduce_factor_cases.py  kfc_factor_cases.py  test___init__.py  test_conv_index_pattern.py  test_diag_ggn.py  test_einconvnd.py  test_einconvnd_functional.py  test_einconvnd_module.py  test_index_pattern.py  test_kfac_reduce_factor.py  test_kfc_factor.py  test_tutorials.py  test_unfoldNd.py  test_utils.py  test_vjp.py  unfold_cases.py  utils.py  utils_cases.py  utils_jax.py  utils_third_party.py
test/expressions/: __init__.py  convNd_input_vjp_cases.py  convNd_kfac_reduce_cases.py  convNd_kfc_cases.py  convNd_weight_vjp_cases.py  conv_transposeNd_forward_cases.py  conv_transposeNd_kfac_reduce_cases.py  kfac_reduce_factor_cases.py  test_convNd_diag_ggn.py  test_convNd_input_vjp.py  test_convNd_kfac_reduce.py  test_convNd_kfc.py  test_convNd_weight_vjp.py  test_conv_transposeNd_forward.py  test_conv_transposeNd_kfac_reduce.py  test_utils.py
test/functionals/: __init__.py  conv_cases.py  test_conv.py  test_unfold.py  test_unfold_transpose.py  transpose_unfold_cases.py  unfold_cases.py
test/modules/: __init__.py  conv_cases.py  test_conv.py  test_unfold.py  unfold_cases.py
test/simplifications/: __init__.py  test_opt.py  test_symbolic.py
